fix: add codecov secret

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,6 +11,10 @@ on:
         required: false
         default: 'app'
         type: string
+    secrets:
+      CODECOV_TOKEN:
+        required: false
+    
 
 jobs:
   test:
