--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,3 +47,7 @@ jobs:
           
       - name: Upload to Codecov
         uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.xml
+          verbose: true
