--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,10 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=13 --max-line-length=127 --statistics
 
+      - name: Write GCP credentials to file
+        if: ${{ secrets.GCP_CREDENTIALS_JSON != '' }}
+        run: echo "${{ secrets.GCP_CREDENTIALS_JSON }}" > gcs-key.json
+
       - name: Run tests (Docker or local)
         run: |
           docker compose -f docker-compose.yml -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from test
